trunk/Archive2/8b/4e7e0ae584e9bc/output
main.cpp:1:8: error: function cannot return array type 'int [5]'
int foo()[5] {
       ^
main.cpp:3:12: error: cannot initialize return object of type 'int' with an lvalue of type 'int [5]'
    return arr;
           ^~~
2 errors generated.
